crates/shipper-duration/tests/snapshots/snapshots__format_hours.snap
---
source: crates/shipper-duration/tests/snapshots.rs
expression: "output.join(\"\\n\")"
---
1h => 1h
2h => 2h
12h => 12h
23h => 23h
