crates/shipper-duration/tests/snapshots/snapshots__format_mixed_durations.snap
---
source: crates/shipper-duration/tests/snapshots.rs
expression: "output.join(\"\\n\")"
---
1m30s (90s) => 1m 30s
1h1m1s (3661s) => 1h 1m 1s
1d1h1m1s (90061s) => 1day 1h 1m 1s
25m (1500s) => 25m
