crates/shipper-duration/tests/snapshots/snapshots__parse_error_invalid_input.snap
---
source: crates/shipper-duration/tests/snapshots.rs
expression: "output.join(\"\\n\")"
---
"not-a-duration" => expected number at 0
"" => value was empty
"abc" => expected number at 0
"1x" => unknown time unit "x", supported units: ns, us/µs, ms, sec, min, hours, days, weeks, months, years (and few variations)
"ms" => expected number at 0
