crates/shipper-duration/tests/snapshots/snapshots__serde_json_deserialize_from_integer.snap
---
source: crates/shipper-duration/tests/snapshots.rs
expression: "output.join(\"\\n\")"
---
0 => 0ns
100 => 100ms
1500 => 1.5s
60000 => 60s
